made Create Team + the according view and form

--- a/src/AppBundle/Resources/config/doctrine/Team.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Team.orm.yml
@@ -11,3 +11,9 @@ AppBundle\Entity\Team:
         createdDatetime:
             type: datetime
             column: created_datetime
+        name:
+            type: string
+            column: name
+        logo:
+            type: string
+            column: logo
