changed to bet (REMEMBER TO UPDATE ENTITIES AND DATABASE!!)

--- a/src/AppBundle/Resources/config/doctrine/Bet.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Bet.orm.yml
@@ -27,6 +27,7 @@ AppBundle\Entity\Bet:
         closedDatetime:
             type: datetime
             column: closed_datetime
+            nullable: true
     manyToOne:
         homeTeam:
             targetEntity: AppBundle\Entity\Team
