added betTime entity (REMEMBER SCHEMA:UPDATE)

--- a/src/AppBundle/Resources/config/doctrine/Bet.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Bet.orm.yml
@@ -11,6 +11,9 @@ AppBundle\Entity\Bet:
         createdDatetime:
             type: datetime
             column: created_datetime
+        betTime:
+            type: datetime
+            column: bet_time
         status:
             type: integer
             length: 2
