Added balance to User entity

--- a/src/AppBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/User.orm.yml
@@ -7,3 +7,7 @@ AppBundle\Entity\User:
             id: true
             generator:
                 strategy: AUTO
+    fields:
+        balance:
+            type: decimal
+            scale: 2
