--- a/src/AppBundle/Resources/config/doctrine/Coupon.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Coupon.orm.yml
@@ -14,6 +14,12 @@ AppBundle\Entity\Coupon:
         wager:
             type: decimal
             scale: 2
+        team:
+            type: string
+            length: 255
+        odds:
+            type: decimal
+            scale: 2
     manyToOne:
         bet:
             targetEntity: AppBundle\Entity\Bet
