added a coupon repo

--- a/src/AppBundle/Resources/config/doctrine/Coupon.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Coupon.orm.yml
@@ -1,6 +1,7 @@
 AppBundle\Entity\Coupon:
     type: entity
     table: coupons
+    repositoryClass: AppBundle\Entity\Repository\CouponRepository
     id:
         id:
             type: integer
